--- a/src/java/com/myapp/struts/db.properties
+++ b/src/java/com/myapp/struts/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/mynewdatabase
+url=jdbc:mysql://localhost:3306/sakila
 user=root
 password=nbuser
