--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -43,7 +43,7 @@ errors.footer=</UL>
 # -- validator --
 errors.invalid={0} is invalid.
 errors.maxlength={0} can not be greater than {1} characters.
-errors.minlength={0} can not be less than {1} characters.
+errors.minlength={0} can not be less than {8} characters.
 errors.range={0} is not in the range {1} through {2}.
 errors.required={0} is required.
 errors.byte={0} must be an byte.
@@ -55,6 +55,7 @@ errors.long={0} must be an long.
 errors.short={0} must be an short.
 errors.creditcard={0} is not a valid credit card number.
 errors.email={0} is an invalid e-mail address.
+errors.email2={0} must have "@sakilastaff.com" at end of email.
 # -- other --
 errors.cancel=Operation cancelled.
 errors.detail={0}
